Endret velkommen side

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -71,8 +71,8 @@
     "steg.footer.fortsettSenere": "Fortsett senere",
 
     "step.velkommen.banner.tittel": "Hei!",
-    "step.velkommen.banner.tekst": "Jeg vil hjelpe deg med å fylle ut skjemaet, slik at du kan overføre omsorgsdager.",
-    "step.velkommen.tittel": "Overføring av omsorgsdager",
+    "step.velkommen.banner.tekst": "Jeg vil hjelpe deg med å fylle ut søknad.......",
+    "step.velkommen.tittel": "Søknad om å bli regnet som at du er alene om omsorgen for barnet",
     "step.velkommen.personopplysninger.lenketekst": "Les om hvordan NAV behandler personopplysningene dine",
     "step.velkommen.button.start": "Fortsett",
 
