--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -31,8 +31,6 @@
 
     "lesMerOmFastBostedOgSamvær": "Les mer om fast bosted og samvær",
 
-    "nav.no": "nav.no",
-
     "step.om-barna.pageTitle": "Om barna",
     "step.om-barna.stepTitle": "Om barna",
     "step.om-barna.info.1": "Når det gjelder omsorgsdager, er du regnet som alene om omsorgen hvis du ikke bor sammen med den andre forelderen, og barnet bor fast bare hos deg. Det vil si at barnet har folkeregistrert adresse hos deg.",
@@ -58,10 +56,6 @@
     "step.annen-forelder-situasjon.pageTitle": "Den andre forelderens situasjon",
     "step.annen-forelder-situasjon.stepTitle": "Den andre forelderens situasjon",
     "step.annen-forelder-situasjon.nextButtonLabel": "Fortsett",
-
-    "step.medlemskap.pageTitle": "Medlemskap",
-    "step.medlemskap.stepTitle": "Medlemskap",
-    "step.medlemskap.nextButtonLabel": "Fortsett",
 
     "step.oppsummering.pageTitle": "Oppsummering",
     "step.oppsummering.stepTitle": "Oppsummering",
@@ -149,5 +143,17 @@
     "step.annenForeldrensSituasjon.periode.fengsel.spm": "Hvilken periode gjelder soningen?",
     "step.annenForeldrensSituasjon.periode.verneplikt.spm": "Hvilken periode gjelder verneplikten?",
     "step.annenForeldrensSituasjon.periode.fra": "Fra",
-    "step.annenForeldrensSituasjon.periode.til": "Til"
+    "step.annenForeldrensSituasjon.periode.til": "Til",
+
+    "step.medlemskap.pageTitle": "Medlemskap",
+    "step.medlemskap.stepTitle": "Medlemskap",
+    "step.medlemskap.nextButtonLabel": "Fortsett",
+    "steg.medlemsskap.info": "Medlemskap i folketrygden er nøkkelen til rettigheter fra NAV. Hvis du bor eller jobber i Norge er du vanligvis medlem. Du kan lese mer om medlemskap på",
+    "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i utlandet i hele eller deler av de siste 12 månedene?",
+    "steg.medlemsskap.annetLandNeste12.spm": "Planlegger du å bo i utlandet i hele eller deler av de neste 12 månedene?",
+    "steg.medlemsskap.annetLandSiste12.hjelp": "Du svarer ja bare hvis du har oppholdt deg fast i et annet land enn Norge. Korte utlandsturer i forbindelse med for eksempel ferie regnes ikke med.",
+    "steg.medlemsskap.annetLandSiste12.listeTittel": "Utenlandsopphold siste 12 måneder",
+    "steg.medlemsskap.annetLandNeste12.hjelp": "Du svarer ja bare hvis du planlegger å oppholde deg fast i et annet land enn Norge. Korte utlandsturer i forbindelse med for eksempel ferie regnes ikke med.",
+    "steg.medlemsskap.annetLandNeste12.listeTittel": "Utenlandsopphold neste 12 måneder",
+    "step.medlemskap.knap.leggNyttUtenlandsopphold": "Legg til nytt utenlandsopphold"
 }
