Opprettet Om barn steg

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -33,17 +33,8 @@
 
     "step.om-barna.pageTitle": "Om barna",
     "step.om-barna.stepTitle": "Om barna",
-    "step.om-barna.info.1": "Når det gjelder omsorgsdager, er du regnet som alene om omsorgen hvis du ikke bor sammen med den andre forelderen, og barnet bor fast bare hos deg. Det vil si at barnet har folkeregistrert adresse hos deg.",
-    "step.om-barna.info.2": "Hvis du og den andre forelderen har en avtale om delt bosted bor barnet fast hos dere begge, og ingen av dere blir regnet som alene om omsorgen.",
-    "step.om-barna.info.3": "Hvis du er alene om omsorgen nå, men blir sammen med den andre forelderen, må du melde fra om det til NAV.",
-    "step.om-barna.født": "Født",
-    "step.om-barna.info.barnOver12": "For å få omsorgsdager for barn som er 13 år eller eldre, må du ha søkt om og fått innvilget ekstra omsorgsdager fordi barnet har en kronisk sykdom eller funksjonshemning.",
-    "step.om-barna.form.spm.harAleneOmsorg": "Er du alene om omsorgen for barn?",
-    "step.om-barna.form.spm.hvilkeAvBarnaAleneomsorg": "Kryss av for barn du er alene om omsorgen for",
-    "step.om-barna.form.spm.harNoenUtvidetRett.flereBarn": "Har du fått ekstra omsorgsdager for noen av barna på grunn av kronisk sykdom eller funksjonshemning?",
-    "step.om-barna.form.spm.harNoenUtvidetRett.ettBarn": "Har du fått ekstra omsorgsdager for barn på grunn av kronisk sykdom eller funksjonshemning?",
-    "step.om-barna.form.spm.hvilkeAvBarnaUtvRett": "Kryss av for barn du har fått ekstra omsorgsdager for",
     "step.om-barna.nextButtonLabel": "Fortsett",
+    "step.om-barna.hvorMangeBarn.spm": "Hvor mange felles barn har dere? Inkludert eventuelle fosterbarn",
 
     "step.din-arbeidsituasjon.pageTitle": "Din arbeidsituasjon",
     "step.din-arbeidsituasjon.stepTitle": "Din arbeidsituasjon",
