Satt opp "Oppsummering" steg

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -20,6 +20,12 @@
     "selvstendigNæringsdrivende": "selvstendig næringsdrivende",
     "frilanser": "frilanser",
 
+    "grunn.sykdom": "Sykdom",
+    "grunn.innlagtIHelseinstitusjon": "Innlagt i helseinstitusjon",
+    "grunn.fengsel": "Fengsel",
+    "grunn.utøverVerneplikt": "Utøver verneplikt",
+    "grunn.annet": "Annet",
+
     "mottaker.ektefelle": "ektefelle",
     "mottaker.samboer": "samboer",
 
@@ -39,6 +45,7 @@
     "step.din-arbeidsituasjon.pageTitle": "Din arbeidsituasjon",
     "step.din-arbeidsituasjon.stepTitle": "Din arbeidsituasjon",
     "step.din-arbeidsituasjon.nextButtonLabel": "Fortsett",
+    "step.din-arbeidsituasjon.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
 
     "step.om-annen-forelder.pageTitle": "Om den andre forelderen",
     "step.om-annen-forelder.stepTitle": "Om den andre forelderen",
@@ -67,42 +74,25 @@
     "samtykke.harForståttLabel.lenketekst": "dine plikter",
     "fieldvalidation.mottakersFnrErSøkersFnr": "Du har tastet inn ditt eget fødselsnummer",
 
-    "step.din_situasjon.veileder.intro.1": "For å ha rett til å overføre omsorgsdager må både du og den du skal overføre omsorgsdager til bo og/eller jobbe i Norge.",
-    "step.din_situasjon.veileder.intro.2": "Medlemskap i folketrygden er nøkkelen til rettigheter fra NAV. Hvis du bor eller jobber i Norge er du vanligvis medlem. Du kan lese mer om medlemskap på ",
-    "step.din_situasjon.form.borINorge.spm": "Bor du i Norge?",
-    "step.din_situasjon.form.arbeiderINorge.spm": "Jobber du i Norge?",
-    "step.din_situasjon.form.arbeiderINorge.stopMessage": "For å ha rett på omsorgsdager og overføre disse til en annen, må du ha jobb og være yrkesaktiv. Det betyr at du må minst være én av punktene under",
-    "step.din_situasjon.form.arbeidssituasjon.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
-    "step.din_situasjon.form.harBruktOmsorgsdagerEtter1Juli.spm": "Har du brukt omsorgsdager etter 1. juli 2020?",
-    "step.din_situasjon.form.antallDagerBruktEtter1Juli.spm": "Hvor mange omsorgsdager har du brukt etter 1. juli 2020?",
-
     "step.oppsummering.info": "Les gjennom oppsummeringen og sjekk at alt er riktig før du sender inn meldingen om overføring av omsorgsdager. Hvis du vil gjøre endringer, kan du gå tilbake.",
-    "step.oppsummering.søker.header": "Om deg",
+    "step.oppsummering.søker.header": "Om deg som søker",
+    "step.oppsummering.søker.arbeidssituasjon": "Hva er din arbeidssituasjon?",
 
-    "step.oppsummering.dine-barn.header": "Barna dine",
-    "step.oppsummering.dine-barn.født": "Født",
-    "step.oppsummering.dine-barn.listHeader": "Dine barn",
-
-    "step.oppsummering.om-barna.header": "Om barna dine",
+    "step.oppsummering.om-barna.header": "Om barn i husstanden",
     "step.oppsummering.om-barna.født": "Født",
-    "step.oppsummering.om-barna.harAleneomsorg": "Er du alene om omsorgen for barn?",
-    "step.oppsummering.om-barna.harAleneomsorg.stopMessage": "For å overføre omsorgsdager til en ny ektefelle eller samboer du har bodd med i minst 12 måneder, må du være alene om omsorgen for barnet du skal overføre omsorgsdager for.",
-    "step.oppsummering.om-barna.hvilkeAvBarnaAleneomsorg": "Barn du er alene om omsorgen for",
-    "step.oppsummering.om-barna.harNoenUtvidetRett": "Har du fått ekstra omsorgsdager for barn som har en kronisk sykdom eller en funksjonshemning?",
-    "step.oppsummering.om-barna.hvilkeAvBarnaUtvRett": "Barn du har fått ekstra omsorgsdager for",
 
-    "step.oppsummering.dinSituasjon.header": "Din situasjon",
-    "step.oppsummering.dinSituasjon.arbeiderINorge": "Jobber du i Norge?",
-    "step.oppsummering.dinSituasjon.borINorge": "Bor du i Norge?",
-    "step.oppsummering.dinSituasjon.arbeidssituasjon": "Hva er din arbeidssituasjon?",
-    "step.oppsummering.dinSituasjon.harBruktOmsorgsdagerEtter1Juli": "Har du brukt omsorgsdager etter 1. juli 2020?",
-    "step.oppsummering.dinSituasjon.antallDagerBruktEtter1Juli": "Hvor mange omsorgsdager har du brukt etter 1. juli 2020?",
+    "step.oppsummering.annenForelder.header": "Om den andre forelderen",
 
-    "step.oppsummering.mottaker.header": "Om den du skal overføre omsorgsdager til",
-    "step.oppsummering.mottaker.type": "Hvem skal du overføre dager til?",
-    "step.oppsummering.mottaker.navn": "Navn",
-    "step.oppsummering.mottaker.fnr": "Fødselsnummer",
-    "step.oppsummering.antallDagerSomSkalOverføres": "Hvor mange omsorgsdager vil du overføre?",
+    "step.oppsummering.annenForelderensSituasjon.header": "Den andre forelderens situasjon",
+    "step.oppsummering.annenForelderensSituasjon.erVarighetMerEnn6Maneder": "Jeg bekrefter at den andre forelderen ikke kan ha tilsyn med barnet/barna i minst 6 måneder",
+    "step.oppsummering.annenForelderensSituasjon.html": "<strong>Grunn: </strong>",
+    "step.oppsummering.annenForelderensSituasjon.beskrivelse": "Beskrivelse av situasjonen:",
+    "step.oppsummering.annenForelderensSituasjon.periode.header": "Periode når den andre forelderen kan ikke ha tilsyn med barnet/barna:",
+
+    "steg.oppsummering.medlemskap.utlandetSiste12.header": "Har bodd i utlandet siste 12 måneder?",
+    "steg.oppsummering.medlemskap.utlandetNeste12.header": "Skal bo i utlandet neste 12 måneder",
+    "steg.oppsummering.medlemskap.utlandetSiste12.liste.header": "Utenlandsopphold siste 12 måneder",
+    "steg.oppsummering.medlemskap.utlandetNeste12.liste.header": "Utenlandsopphold neste 12 måneder",
 
     "step.oppsummering.bekrefterOpplysninger": "Jeg bekrefter at opplysningene jeg har gitt er riktige, og at jeg ikke har holdt tilbake opplysninger som har betydning for min rett til omsorgsdager.",
 
@@ -135,6 +125,7 @@
     "step.annenForeldrensSituasjon.periode.verneplikt.spm": "Hvilken periode gjelder verneplikten?",
     "step.annenForeldrensSituasjon.periode.fra": "Fra",
     "step.annenForeldrensSituasjon.periode.til": "Til",
+    "step.annenForeldrensSituasjon.hvorLengeInnleggelsesperiodenKommerTil.spm": "Vet du hvor lenge innleggelsesperioden kommer til å vare? ",
 
     "step.medlemskap.pageTitle": "Medlemskap",
     "step.medlemskap.stepTitle": "Medlemskap",
