La til tekster før innlogging

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -1,5 +1,5 @@
 {
-    "application.title": "Søknad om å bli regnet som midertidig alene for omsorgen",
+    "application.title": "Søknad om å bli regnet som alene om omsorgen",
 
     "application.loadError.title": "Noe gikk galt ...",
     "application.loadError.message": "Beklager, her har det dessverre skjedd en feil. Dersom feilen fortsetter, prøv igjen litt senere.",
