La til tekster i Annen forelderen situasjon

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -56,8 +56,26 @@
     "step.om-annen-forelder.banner.list.2": "som ikke er i stand til å ta seg av barn i en periode på minst 6 måneder",
     "step.om-Annen-forlder.fnr.spm": "Skriv inn fødselsnummeret til den andre forelderen, 11 siffer",
     "step.om-Annen-forlder.navn.spm": "Skriv inn navnet til den andre forelderen",
-
     "step.om-annen-forelder.nextButtonLabel": "Fortsett",
+
+    "step.annen-foreldrens-situasjon.tittel": "Den andre forelderens situasjon",
+    "step.annen-foreldrens-situasjon.banner.1": "Her skal du gi informasjon om hva som er grunnen til at den andre forelderen ikke kan ta seg av barn i en periode på minst 6 måneder.",
+    "step.annen-foreldrens-situasjon.banner.2": "Husk at du ikke regnes for å være alene om omsorgen hvis den andre er mye borte fra hjemmet på grunn av jobb, skole eller studier.",
+    "step.annen-foreldrens-situasjon.grunn.spm": "Hva er grunnen til at...?",
+    "step.annen-foreldrens-situasjon.grunn.sykdom": "Sykdom, skade eller funksjonhemming",
+    "step.annen-foreldrens-situasjon.grunn.innlagtIHelseinstitusjon": "Innlagt i helseinstitusjon",
+    "step.annen-foreldrens-situasjon.grunn.fengsel": "Fengsel",
+    "step.annen-foreldrens-situasjon.grunn.verneplikt": "Verneplikt",
+    "step.annen-foreldrens-situasjon.grunn.annet": "Annet",
+    "step.annen-foreldrens-situasjon.beskrivelseAvSituasjonen.spm": "Beskriv hva som gjør at den andre forelderen ikke er i stand til å ta seg av barn:",
+    "step.annen-foreldrens-situasjon.erVarighetMerEnn6Maneder.spm": "Kan du bekrefte at den andre forelderen ikke er i stand til å ta seg av barn i en periode på minst 6 måneder?",
+    "step.annen-foreldrens-situasjon.periode.innlagtIHelseinstitusjon.spm": "Hvilken periode gjelder innleggelsen?",
+    "step.annen-foreldrens-situasjon.periode.fengsel.spm": "Hvilken periode gjelder soningen?",
+    "step.annen-foreldrens-situasjon.periode.verneplikt.spm": "Hvilken periode gjelder verneplikten?",
+    "step.annen-foreldrens-situasjon.periode.fra": "Fra",
+    "step.annen-foreldrens-situasjon.periode.til": "Til",
+    "step.annen-foreldrens-situasjon.vetLengdePåInnleggelseperioden.spm": "Vet du hvor lenge innleggelsesperioden kommer til å vare? ",
+    "step.annen-foreldrens-situasjon.advarsel.1": "Hvis perioden den andre forelderen ikke kan ta seg av barn er på mindre enn 6 måneder, vil du ikke bli regnet som alene om omsorgen.",
 
     "step.om-barna.pageTitle": "Om barna",
     "step.om-barna.stepTitle": "Om barna",
@@ -113,22 +131,6 @@
     "kvittering.info.3a": "Når vi har behandlet meldingen din får både du og den du overfører omsorgsdager til et svar fra oss i posten, og på deres egne sider på",
     "kvittering.info.3b": "Ditt NAV",
     "kvittering.info.3c": ". Vi gir beskjed når meldingen er ferdig behandlet.",
-
-    "step.annenForeldrensSituasjon.tittel": "Den andre forelderens situasjon",
-    "step.annenForeldrensSituasjon.grunn.spm": "Hva er grunnen til at...?",
-    "step.annenForeldrensSituasjon.grunn.sykdom": "Sykdom, skade eller funksjonhemming",
-    "step.annenForeldrensSituasjon.grunn.innlagtIHelseinstitusjon": "Innlagt i helseinstitusjon",
-    "step.annenForeldrensSituasjon.grunn.fengsel": "Fengsel",
-    "step.annenForeldrensSituasjon.grunn.verneplikt": "Verneplikt",
-    "step.annenForeldrensSituasjon.grunn.annet": "Annet",
-    "step.annenForeldrensSituasjon.beskrivelseAvSituasjonen.spm": "Gi en utdypende beskrivelse av situasjonen",
-    "step.annenForeldrensSituasjon.erVarighetMerEnn6Maneder.spm": "Er det varighet på mer enn 6 måneder?",
-    "step.annenForeldrensSituasjon.periode.innlagtIHelseinstitusjon.spm": "Hvilken periode gjelder innleggelsen?",
-    "step.annenForeldrensSituasjon.periode.fengsel.spm": "Hvilken periode gjelder soningen?",
-    "step.annenForeldrensSituasjon.periode.verneplikt.spm": "Hvilken periode gjelder verneplikten?",
-    "step.annenForeldrensSituasjon.periode.fra": "Fra",
-    "step.annenForeldrensSituasjon.periode.til": "Til",
-    "step.annenForeldrensSituasjon.vetLengdePåInnleggelseperioden.spm": "Vet du hvor lenge innleggelsesperioden kommer til å vare? ",
 
     "step.medlemskap.pageTitle": "Medlemskap",
     "step.medlemskap.stepTitle": "Medlemskap",
