--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -1,5 +1,5 @@
 {
-    "application.title": "Søknad om å bli regnet som alene om omsorgen",
+    "application.title": "Søknad om å bli regnet som alene om omsorgen for barn",
 
     "application.loadError.title": "Noe gikk galt ...",
     "application.loadError.message": "Beklager, her har det dessverre skjedd en feil. Dersom feilen fortsetter, prøv igjen litt senere.",
@@ -54,8 +54,8 @@
     "step.om-annen-forelder.banner": "Her legger du inn informasjon om den andre forelderen som ",
     "step.om-annen-forelder.banner.list.1": "du bor sammen med, og",
     "step.om-annen-forelder.banner.list.2": "som ikke er i stand til å ta seg av barn i en periode på minst 6 måneder",
-    "step.om-Annen-forlder.fnr.spm": "Skriv inn fødselsnummeret til den andre forelderen, 11 siffer",
-    "step.om-Annen-forlder.navn.spm": "Skriv inn navnet til den andre forelderen",
+    "step.om-annen-forlder.fnr.spm": "Skriv inn fødselsnummeret til den andre forelderen, 11 siffer",
+    "step.om-annen-forlder.navn.spm": "Skriv inn navnet til den andre forelderen",
     "step.om-annen-forelder.nextButtonLabel": "Fortsett",
 
     "step.annen-foreldrens-situasjon.tittel": "Den andre forelderens situasjon",
@@ -86,52 +86,6 @@
     "step.deres-felles-barn.nextButtonLabel": "Fortsett",
     "step.deres-felles-barn.hvorMangeBarn.spm": "Hvor mange felles barn har dere? Inkludert eventuelle fosterbarn",
 
-    "step.oppsummering.pageTitle": "Oppsummering",
-    "step.oppsummering.stepTitle": "Oppsummering",
-    "step.oppsummering.nextButtonLabel": "Fortsett",
-
-    "steg.footer.avbryt": "Avbryt",
-    "steg.footer.fortsettSenere": "Fortsett senere",
-
-    "samtykke.tekst": "Jeg bekrefter at jeg har lest og forstått",
-    "samtykke.harIkkeGodkjentVilkår": "Du må godkjenne vilkårene",
-    "samtykke.harForståttLabel": "For å gå videre må du bekrefte at du har lest og forstått {plikterLink}.",
-    "samtykke.harForståttLabel.lenketekst": "dine plikter",
-    "fieldvalidation.mottakersFnrErSøkersFnr": "Du har tastet inn ditt eget fødselsnummer",
-
-    "step.oppsummering.info": "Les gjennom oppsummeringen og sjekk at alt er riktig før du sender inn meldingen om overføring av omsorgsdager. Hvis du vil gjøre endringer, kan du gå tilbake.",
-    "step.oppsummering.søker.header": "Om deg som søker",
-    "step.oppsummering.søker.arbeidssituasjon": "Hva er din arbeidssituasjon?",
-
-    "step.oppsummering.om-barna.header": "Om barn i husstanden",
-    "step.oppsummering.om-barna.født": "Født",
-
-    "step.oppsummering.annenForelder.header": "Om den andre forelderen",
-
-    "step.oppsummering.annenForelderensSituasjon.header": "Den andre forelderens situasjon",
-    "step.oppsummering.annenForelderensSituasjon.erVarighetMerEnn6Maneder": "Jeg bekrefter at den andre forelderen ikke kan ha tilsyn med barnet/barna i minst 6 måneder",
-    "step.oppsummering.annenForelderensSituasjon.html": "<strong>Grunn: </strong>",
-    "step.oppsummering.annenForelderensSituasjon.beskrivelse": "Beskrivelse av situasjonen:",
-    "step.oppsummering.annenForelderensSituasjon.periode.header": "Periode når den andre forelderen kan ikke ha tilsyn med barnet/barna:",
-
-    "steg.oppsummering.medlemskap.utlandetSiste12.header": "Har bodd i utlandet siste 12 måneder?",
-    "steg.oppsummering.medlemskap.utlandetNeste12.header": "Skal bo i utlandet neste 12 måneder",
-    "steg.oppsummering.medlemskap.utlandetSiste12.liste.header": "Utenlandsopphold siste 12 måneder",
-    "steg.oppsummering.medlemskap.utlandetNeste12.liste.header": "Utenlandsopphold neste 12 måneder",
-
-    "step.oppsummering.bekrefterOpplysninger": "Jeg bekrefter at opplysningene jeg har gitt er riktige, og at jeg ikke har holdt tilbake opplysninger som har betydning for min rett til omsorgsdager.",
-
-    "step.oppsummering.sendMelding.feilmelding.førsteGang": "Det oppstod en feil under innsending. Vennligst prøv på nytt.",
-    "step.oppsummering.sendMelding.feilmelding.andreGang": "Det oppstod fortsatt en feil under innsending. Vennligst vent litt og prøv på nytt.",
-
-    "kvittering.tittel": "Melding om overføring av omsorgsdager er mottatt",
-    "kvittering.info.tittel": "Hva skjer videre nå?",
-    "kvittering.info.1": "Vi behandler meldingen fra deg om overføring av omsorgsdager.",
-    "kvittering.info.2": "Vi kontakter deg hvis vi trenger flere opplysninger fra deg.",
-    "kvittering.info.3a": "Når vi har behandlet meldingen din får både du og den du overfører omsorgsdager til et svar fra oss i posten, og på deres egne sider på",
-    "kvittering.info.3b": "Ditt NAV",
-    "kvittering.info.3c": ". Vi gir beskjed når meldingen er ferdig behandlet.",
-
     "step.medlemskap.pageTitle": "Medlemskap",
     "step.medlemskap.stepTitle": "Medlemskap",
     "step.medlemskap.nextButtonLabel": "Fortsett",
@@ -142,5 +96,54 @@
     "steg.medlemsskap.annetLandSiste12.listeTittel": "Utenlandsopphold siste 12 måneder",
     "steg.medlemsskap.annetLandNeste12.hjelp": "Du svarer ja bare hvis du planlegger å oppholde deg fast i et annet land enn Norge. Korte utlandsturer i forbindelse med for eksempel ferie regnes ikke med.",
     "steg.medlemsskap.annetLandNeste12.listeTittel": "Utenlandsopphold neste 12 måneder",
-    "step.medlemskap.knap.leggNyttUtenlandsopphold": "Legg til nytt utenlandsopphold"
+    "step.medlemskap.knap.leggNyttUtenlandsopphold": "Legg til nytt utenlandsopphold",
+
+    "step.oppsummering.pageTitle": "Oppsummering",
+    "step.oppsummering.stepTitle": "Oppsummering",
+    "step.oppsummering.nextButtonLabel": "Fortsett",
+    "step.oppsummering.info": "Les gjennom oppsummeringen og sjekk at alt er riktig før du sender inn søknaden. Hvis du vil gjøre endringer, kan du gå tilbake.",
+
+    "step.oppsummering.søker.header": "Om deg som søker",
+    "step.oppsummering.søker.arbeidssituasjon": "Hva er din arbeidssituasjon?",
+
+    "step.oppsummering.deres-felles-barn.header": "Deres felles barn",
+    "step.oppsummering.deres-felles-barn.barn": "Barn",
+    "step.oppsummering.deres-felles-barn.født": "Født i",
+    "step.oppsummering.deres-felles-barn.antallBarn": "Antall barn:",
+
+    "step.oppsummering.annenForelder.header": "Om den andre forelderen",
+
+    "step.oppsummering.annenForelderensSituasjon.header": "Den andre forelderens situasjon",
+    "step.oppsummering.annenForelderensSituasjon.erVarighetMerEnn6Maneder": "Har du bekreftet at den andre forelderen ikke er i stand til å ta seg av barn i periode på minst 6 måneder?",
+    "step.oppsummering.annenForelderensSituasjon.html": "<strong>Grunn: </strong>",
+    "step.oppsummering.annenForelderensSituasjon.beskrivelse": "Beskrivelse av situasjonen:",
+    "step.oppsummering.annenForelderensSituasjon.periode.header": "Periode når den andre forelderen kan ikke ha tilsyn med barnet/barna:",
+
+    "steg.oppsummering.medlemskap.header": "Medlemskap i Folketrygden",
+    "steg.oppsummering.medlemskap.utlandetSiste12.header": "Har du bodd i utlandet i de siste 12 månedene?",
+    "steg.oppsummering.medlemskap.utlandetNeste12.header": "Skal du bo i utlandet i de neste 12 månedene?",
+    "steg.oppsummering.medlemskap.utlandetSiste12.liste.header": "Utenlandsopphold siste 12 måneder",
+    "steg.oppsummering.medlemskap.utlandetNeste12.liste.header": "Utenlandsopphold neste 12 måneder",
+
+    "step.oppsummering.bekrefterOpplysninger": "Jeg bekrefter at opplysningene jeg har gitt er riktige, og at jeg ikke har holdt tilbake opplysninger som har betydning for min rett til omsorgsdager.",
+
+    "step.oppsummering.sendMelding.feilmelding.førsteGang": "Det oppstod en feil under innsending. Vennligst prøv på nytt.",
+    "step.oppsummering.sendMelding.feilmelding.andreGang": "Det oppstod fortsatt en feil under innsending. Vennligst vent litt og prøv på nytt.",
+
+    "steg.footer.avbryt": "Avbryt",
+    "steg.footer.fortsettSenere": "Fortsett senere",
+
+    "samtykke.tekst": "Jeg bekrefter at jeg har lest og forstått",
+    "samtykke.harIkkeGodkjentVilkår": "Du må godkjenne vilkårene",
+    "samtykke.harForståttLabel": "For å gå videre må du bekrefte at du har lest og forstått {plikterLink}.",
+    "samtykke.harForståttLabel.lenketekst": "dine plikter",
+    "fieldvalidation.mottakersFnrErSøkersFnr": "Du har tastet inn ditt eget fødselsnummer",
+
+    "kvittering.tittel": "Melding om overføring av omsorgsdager er mottatt",
+    "kvittering.info.tittel": "Hva skjer videre nå?",
+    "kvittering.info.1": "Vi behandler meldingen fra deg om overføring av omsorgsdager.",
+    "kvittering.info.2": "Vi kontakter deg hvis vi trenger flere opplysninger fra deg.",
+    "kvittering.info.3a": "Når vi har behandlet meldingen din får både du og den du overfører omsorgsdager til et svar fra oss i posten, og på deres egne sider på",
+    "kvittering.info.3b": "Ditt NAV",
+    "kvittering.info.3c": ". Vi gir beskjed når meldingen er ferdig behandlet."
 }
