Endret grunn spørsmål

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -62,7 +62,7 @@
     "step.annen-forelder-situasjon.stepTitle": "Den andre forelderens situasjon",
     "step.annen-foreldrens-situasjon.banner.1": "Her skal du gi informasjon om hva som er grunnen til at den andre forelderen ikke kan ta seg av barn i en periode på minst 6 måneder.",
     "step.annen-foreldrens-situasjon.banner.2": "Husk at du ikke regnes for å være alene om omsorgen hvis den andre er mye borte fra hjemmet på grunn av jobb, skole eller studier.",
-    "step.annen-foreldrens-situasjon.grunn.spm": "Hva er grunnen til at...?",
+    "step.annen-foreldrens-situasjon.grunn.spm": "Velg én av disse grunnene til at den andre forelderen ikke kan ta seg av barn i en periode på 6 måneder:",
     "step.annen-foreldrens-situasjon.grunn.sykdom": "Sykdom, skade eller funksjonhemming",
     "step.annen-foreldrens-situasjon.grunn.innlagtIHelseinstitusjon": "Innlagt i helseinstitusjon",
     "step.annen-foreldrens-situasjon.grunn.fengsel": "Fengsel",
