Endret ikke myndig side BR-1091

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -6,11 +6,11 @@
 
     "page.error.pageTitle": "Noe gikk galt ...",
 
-    "page.ikkeMyndig.sidetittel": "Søknad om overføring av omsorgsdager - ikke myndig",
+    "page.ikkeMyndig.sidetittel": "Søknad om å bli regnet som alene om omsorgen for barn",
     "page.ikkeMyndig.banner.tittel": "Hei!",
     "page.ikkeMyndig.banner.tekst": "Fordi du er under 18 år, må en av foreldrene dine eller en foresatt skrive under på søknaden sammen med deg. Du må derfor fylle ut søknaden på papir og sende den i posten.",
-    "page.ikkeMyndig.banner.lastNed": "Melding om deling av omsorgsdager",
-    "page.ikkeMyndig.tittel": "Søknad om overføring av omsorgsdager",
+    "page.ikkeMyndig.banner.lastNed": "Søknad om å bli regnet som alene om omsorgen for barn",
+    "page.ikkeMyndig.tittel": "Søknad om å bli regnet som alene om omsorgen for barn",
 
     "arbeidssituasjon.arbeidstaker": "Arbeidstaker",
     "arbeidssituasjon.selvstendigNæringsdrivende": "Selvstendig næringsdrivende",
