Submit knapp i oppsummeringen

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -104,7 +104,7 @@
 
     "step.oppsummering.pageTitle": "Oppsummering",
     "step.oppsummering.stepTitle": "Oppsummering",
-    "step.oppsummering.nextButtonLabel": "Fortsett",
+    "step.oppsummering.nextButtonLabel": "Send inn søknaden",
     "step.oppsummering.info": "Les gjennom oppsummeringen og sjekk at alt er riktig før du sender inn søknaden. Hvis du vil gjøre endringer, kan du gå tilbake.",
 
     "step.oppsummering.søker.header": "Om deg som søker",
