--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -148,5 +148,6 @@
     "kvittering.info.1": "Vi behandler søknaden fra deg om å bli regnet som alene om omsorgen.",
     "kvittering.info.2": "Vi kontakter deg hvis vi trenger flere opplysninger fra deg.",
     "kvittering.info.3a": "Når vi har behandlet søknaden din får du et svar fra oss i posten og på ",
-    "kvittering.info.3b": "Ditt NAV"
+    "kvittering.info.3b": "Ditt NAV",
+    "test": "Test"
 }
