Endret tekst i steget "Den andre forelderens situasjon"

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -73,13 +73,13 @@
     "step.annen-foreldrens-situasjon.grunn.verneplikt": "Verneplikt",
     "step.annen-foreldrens-situasjon.grunn.annet": "Annet",
     "step.annen-foreldrens-situasjon.beskrivelseAvSituasjonen.spm": "Beskriv hva som gjør at den andre forelderen ikke er i stand til å ta seg av barn:",
-    "step.annen-foreldrens-situasjon.erVarighetMerEnn6Maneder.spm": "Kan du bekrefte at den andre forelderen ikke er i stand til å ta seg av barn i en periode på minst 6 måneder?",
-    "step.annen-foreldrens-situasjon.periode.innlagtIHelseinstitusjon.spm": "Hvilken periode gjelder innleggelsen?",
-    "step.annen-foreldrens-situasjon.periode.fengsel.spm": "Hvilken periode gjelder soningen?",
-    "step.annen-foreldrens-situasjon.periode.verneplikt.spm": "Hvilken periode gjelder verneplikten?",
+    "step.annen-foreldrens-situasjon.erVarighetMerEnn6Maneder.spm": "Perioden den andre forelderen ikke kan ta seg av barn må ha en varighet på minst 6 måneder, kan du bekrefte at dette er tilfelle?",
+    "step.annen-foreldrens-situasjon.periode.innlagtIHelseinstitusjon.spm": "I hvilken periode gjelder innleggelsen?",
+    "step.annen-foreldrens-situasjon.periode.fengsel.spm": "I hvilken periode gjelder soningen i fengsel?",
+    "step.annen-foreldrens-situasjon.periode.verneplikt.spm": "I hvilken periode utføres verneplikten?",
     "step.annen-foreldrens-situasjon.periode.fra": "Fra",
     "step.annen-foreldrens-situasjon.periode.til": "Til",
-    "step.annen-foreldrens-situasjon.vetLengdePåInnleggelseperioden.spm": "Vet du hvor lenge innleggelsesperioden kommer til å vare? ",
+    "step.annen-foreldrens-situasjon.vetLengdePåInnleggelseperioden.spm": "Er det avklart hvor lenge innleggelsen skal vare?",
     "step.annen-foreldrens-situasjon.advarsel.1": "Hvis perioden den andre forelderen ikke kan ta seg av barn er på mindre enn 6 måneder, vil du ikke bli regnet som alene om omsorgen.",
     "step.annen-forelder-situasjon.nextButtonLabel": "Fortsett",
 
